[package]
name = "retool"
version = "0.1.0"
edition = "2021"
description = "Convert 5e.tools data for use with Reroll"
repository = "https://github.com/eth0net/retool-rs"
license = "MIT"
keywords = ["5etools", "reroll", "dnd"]
categories = ["command-line-utilities", "encoding"]

[dependencies]
anyhow = "1.0.65"
clap = { version = "3.2.20", features = ["derive"] }
json = "0.12.4"

[dev-dependencies]
assert_fs = "1.0.7"
