[package]
name = "retool"
version = "0.3.0-dev+races.1"
edition = "2021"
description = "Convert 5e.tools data for use with Reroll"
repository = "https://github.com/eth0net/retool-rs"
license = "MIT"
keywords = ["5etools", "reroll", "dnd"]
categories = ["command-line-utilities", "encoding"]

[dependencies]
anyhow = "1.0.65"
clap = { version = "3.2.20", features = ["derive"] }
comfy-table = "6.1.3"
json = "0.12.4"
lazy_static = "1.4.0"
ordinal = "0.3.2"
regex = "1.7.0"
test-case = "3.1.0"

[dev-dependencies]
assert_fs = "1.0.7"
